<package>
    <name>acura</name>
    <version>1.1.0</version>
    <description>
        package for launch.
    </description>
    <maintainer email="123@gmail.com">123</maintainer>
    <author>123</author>
    <license>BSD,LGPL,LGPL</license>  
    <url>http://wiki.ros.org</url>

    <buildtool_depend>catkin</buildtool_depend>

</package>
